--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         integrity="sha512-vGcPDqyonHb0c11UofnOKdSAt5zYRpKI4ow+v6hat4i96b7nHSn8PQyk0sT5L9RECyksp+SztCPP6bqeeGaRKg=="
         crossorigin="anonymous"></script>
     <script>
-        const socket = io('http://localhost:8080');
+        const socket = io('https://react-socket-server-adriton.herokuapp.com/');
 
         // Referencias a los elementos del DOM
         const formulario = document.querySelector('#miFormulario');
